--- a/npmdependencies/package.json
+++ b/npmdependencies/package.json
@@ -1,30 +1,59 @@
 {
+  "name": "sp-gui",
+  "description": "Components, widgets, bundles and npm dependencies",
+  "version": "0.9.11",
+  "homepage": "https://github.com/sequenceplanner/sp-gui",
+  "bugs": {
+    "url": "https://github.com/sequenceplanner/sp-gui/issues"
+  },
+  "license": "MIT",
+  "repository": { "type": "git", "url": "https://github.com/sequenceplanner/sp-gui.git"},
   "scripts": {
     "postinstall": "webpack --display-error-details",
     "build": "NODE_ENV=production webpack"
   },
   "dependencies": {
-    "bootstrap": "~3.3.7",
-    "chart.js": "~2.5.0",
-    "paths-js": "~0.4.5",
-    "font-awesome": "~4.7.0",
-    "jquery": "~3.1.1",
+    "bootstrap": "^4.1.1", // bootstrap
+    "chart.js": "^2.7.2", // chart library
+    "jquery": "~3.3.1",
     "jsoneditor": "~5.6.0",
-    "react": "~15.3.2",
-    "react-dom": "~15.3.2",
+    "redux": "^4.0.0",
+    // React
+    "react": "^16.4.1",
+    "react-cookie": "^1.0.5",
+    "react-dom": "^16.4.1",
     "react-grid-layout": "~0.13.9",
-    "angular": "~1.6.4",
-    "angular-gantt": "~1.3.3",
-    "moment": "~2.18.1",
-    "angular-moment": "~1.0.1"
+    "react-loadable": "^5.4.0",
+    "react-redux": "^5.0.4",
+    "react-router": "^4.0.0",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-router-dom": "^4.3.1",
+    "react-sparklines": "^1.7.0",
+    "react-test-renderer": "^16.4.1",
+    "reactstrap": "^6.1.0",
+    // Angular
+    "angular": "^1.6.4",
+    "angular-gantt": "^1.3.3",
+    "angular-moment": "^1.0.1",
+    "moment": "^2.18.1",
+    // GraphQL is a query language for your API
+    "graphql": "^0.11.7",
+    "graphql-relay": "^0.5.1",
+    "graphql-sequelize": "^5.3.2",
+    // Icons
+    "font-awesome": "^4.7.0",
+    "glyphicons-halflings": "^1.9.1",
+    "paths-js": "^0.4.5", // svg-paths generation library
+    "simple-line-icons": "^2.4.1",
+    // Webpack
+    "webpack": "^1.14.0",
+    "webpack-uglify-js-plugin": "^1.1.9"
   },
   "devDependencies": {
     "css-loader": "~0.26.1",
     "file-loader": "~0.9.0",
     "json-loader": "~0.5.4",
     "style-loader": "~0.13.1",
-    "url-loader": "~0.5.7",
-    "webpack": "~1.14.0",
-    "webpack-uglify-js-plugin": "~1.1.9"
+    "url-loader": "~0.5.7"
   }
 }
