--- a/npmdependencies/package.json
+++ b/npmdependencies/package.json
@@ -13,12 +13,11 @@
     "build": "NODE_ENV=production webpack"
   },
   "dependencies": {
-    "bootstrap": "^4.1.1", // bootstrap
-    "chart.js": "^2.7.2", // chart library
+    "bootstrap": "^4.1.1",
+    "chart.js": "^2.7.2",
     "jquery": "~3.3.1",
     "jsoneditor": "~5.6.0",
     "redux": "^4.0.0",
-    // React
     "react": "^16.4.1",
     "react-cookie": "^1.0.5",
     "react-dom": "^16.4.1",
@@ -31,21 +30,17 @@
     "react-sparklines": "^1.7.0",
     "react-test-renderer": "^16.4.1",
     "reactstrap": "^6.1.0",
-    // Angular
     "angular": "^1.6.4",
     "angular-gantt": "^1.3.3",
     "angular-moment": "^1.0.1",
     "moment": "^2.18.1",
-    // GraphQL is a query language for your API
     "graphql": "^0.11.7",
     "graphql-relay": "^0.5.1",
     "graphql-sequelize": "^5.3.2",
-    // Icons
     "font-awesome": "^4.7.0",
     "glyphicons-halflings": "^1.9.1",
-    "paths-js": "^0.4.5", // svg-paths generation library
+    "paths-js": "^0.4.5",
     "simple-line-icons": "^2.4.1",
-    // Webpack
     "webpack": "^1.14.0",
     "webpack-uglify-js-plugin": "^1.1.9"
   },
