--- a/npmdependencies/package.json
+++ b/npmdependencies/package.json
@@ -4,19 +4,20 @@
     "build": "NODE_ENV=production webpack"
   },
   "dependencies": {
-    "bootstrap": "~3.3.7",
+    "angular": "~1.6.4",
+    "angular-gantt": "~1.3.3",
+    "angular-moment": "~1.0.1",
+    "bootstrap": "~4.1.3",
     "chart.js": "~2.5.0",
-    "paths-js": "~0.4.5",
     "font-awesome": "~4.7.0",
     "jquery": "~3.1.1",
     "jsoneditor": "~5.6.0",
+    "moment": "~2.18.1",
+    "paths-js": "~0.4.5",
+    "popper.js": "~1.14.4",
     "react": "~15.3.2",
     "react-dom": "~15.3.2",
-    "react-grid-layout": "~0.13.9",
-    "angular": "~1.6.4",
-    "angular-gantt": "~1.3.3",
-    "moment": "~2.18.1",
-    "angular-moment": "~1.0.1"
+    "react-grid-layout": "~0.13.9"
   },
   "devDependencies": {
     "css-loader": "~0.26.1",
